Refactor and restructure ProblemSolver